--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   image_picker: ^1.0.4
   flutter_staggered_grid_view: ^0.7.0
+  google_fonts: ^6.1.0
+  rename_app: ^1.3.1
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +66,8 @@ flutter:
   assets:
     - assets/images/
     - assets/images/stock-images/
+    - assets/images/menu-images/
+
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
